# rust_wasm_duckdb

./: .gitignore  .kodiak.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  setup.rs  vercel.json
.github/: dependabot.yml
.github/workflows/: release.yaml  rust.yml
.vercel/: project.json
pkg/: dist.mjs  package.json  test.html  thing.js
src/: bin.rs  db.rs  interface.hpp  jse.rs  lib.rs  reexporter.cpp  render.rs  rendering.rs  state.rs  tests.rs  tree.rs  types.rs
static/: index.html
tests/: web.rs
