[[bin]]
name = "bin"
path = "src/bin.rs"

[build-dependencies]
cc = { version = "*", features = ['parallel'] }
shellexpand = "*"
which = "*"

[dependencies]
count_tts = "*"
libc = "*"
render = "*"
strum_macros = "0.20.1"

[dev-dependencies]
speculate = "*"

[package]
name = "rust_wasm_duckdb"
version = "0.1.0"
authors = ["Elliana <me@mause.me>"]
edition = "2018"
description = "A test to integrate the wasm version of duckdb with rust in the browser"
repository = "https://github.com/Mause/rust_wasm_duckdb"
license = "MIT"
