[[bin]]
name = "bin"
path = "src/bin.rs"

[build-dependencies]
cc = { version = "*", features = ['parallel'] }
shellexpand = "*"
which = "*"
bindgen = "0.58.1"

[dependencies]
count_tts = "*"
lazy_static = "*"
libc = "*"
render = "*"
string-error = "0.1.0"
strum_macros = "0.21.1"

[dev-dependencies]
kuchiki = "0.8.1"
speculate = "*"

[package]
name = "rust_wasm_duckdb"
version = "0.1.0"
authors = ["Elliana <me@mause.me>"]
edition = "2018"
description = "A test to integrate the wasm version of duckdb with rust in the browser"
repository = "https://github.com/Mause/rust_wasm_duckdb"
license = "MIT"
