[[bin]]
name = "bin"
path = "src/bin.rs"

[dependencies]
count_tts = "*"
libduckdb-sys = { git="https://github.com/wangfenjin/duckdb-rs", rev="4673f1004fffdca296f707a6396b417c2ccbad5d", features=["bundled"] }
lazy_static = "*"
libc = "*"
render = "*"
string-error = "0.1.0"
strum_macros = "0.21.1"

[dev-dependencies]
kuchiki = "0.8.1"
speculate = "*"

[package]
name = "rust_wasm_duckdb"
version = "0.1.0"
authors = ["Elliana <me@mause.me>"]
edition = "2018"
description = "A test to integrate the wasm version of duckdb with rust in the browser"
repository = "https://github.com/Mause/rust_wasm_duckdb"
license = "MIT"
